--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "transfermarkt-api"]
 	path = transfermarkt-api
-	url = https://github.com/felipeall/transfermarkt-api
+	url = https://github.com/zack-fathi/transfermarkt-api.git
