Setting up initial Spring backend.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,10 +9,16 @@ services:
       - POSTGRES_PASSWORD=whoami_password
     ports:
       - "5432:5432"
-    # volumes:
-    #   - pgdata_dev:/var/lib/postgresql/data
+    volumes:
+      - pgdata_dev:/var/lib/postgresql/data
     networks:
       - app_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
 
   pgadmin:
     image: dpage/pgadmin4
@@ -58,21 +64,23 @@ services:
     networks:
       - app_network
 
-  # backend:
-  #   build: ./backend
-  #   container_name: spring-backend-dev
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/whoami_db
-  #     - SPRING_DATASOURCE_USERNAME=whoami_user
-  #     - SPRING_DATASOURCE_PASSWORD=whoami_password
-  #   ports:
-  #     - "8080:8080"
-  #   volumes:
-  #     - ./backend:/app  # Mount source code for live changes
-  #   networks:
-  #     - app_network
+  backend:
+    build:
+      context: ./backend      
+    container_name: spring-backend-dev
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/whoami_db
+      - SPRING_DATASOURCE_USERNAME=whoami_user
+      - SPRING_DATASOURCE_PASSWORD=whoami_password
+    ports:
+      - "8080:8080"
+    volumes:                    
+      - ./backend:/app
+    networks:
+      - app_network
 
 volumes:
   pgdata_dev:
