Made changes to data populator to grab player images and achievements. More setup of Spring backend.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,8 @@ services:
       - POSTGRES_PASSWORD=whoami_password
     ports:
       - "5432:5432"
-    volumes:
-      - pgdata_dev:/var/lib/postgresql/data
+    # volumes:
+    #   - pgdata_dev:/var/lib/postgresql/data
     networks:
       - app_network
     healthcheck:
@@ -64,21 +64,21 @@ services:
     networks:
       - app_network
 
-  backend:
-    build:
-      context: ./backend      
-    container_name: spring-backend-dev
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/whoami_db
-      - SPRING_DATASOURCE_USERNAME=whoami_user
-      - SPRING_DATASOURCE_PASSWORD=whoami_password
-    ports:
-      - "8080:8080"
-    networks:
-      - app_network
+  # backend:
+  #   build:
+  #     context: ./backend      
+  #   container_name: spring-backend-dev
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   environment:
+  #     - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/whoami_db
+  #     - SPRING_DATASOURCE_USERNAME=whoami_user
+  #     - SPRING_DATASOURCE_PASSWORD=whoami_password
+  #   ports:
+  #     - "8080:8080"
+  #   networks:
+  #     - app_network
 
 volumes:
   pgdata_dev:
